# rokae_imitation

./: .gitignore  CMakeLists.txt  README.md
scripts/: pub_keyboard.py  pub_spacemouse.py  vis_command.py
src/: all_control.cpp  arm_control.cpp  gripper_control.cpp
